topページ修正

--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -4509,12 +4509,14 @@ input[type=button].btn-block {
 }
 
 .navbar {
-  position: relative;
+  /* position: relative; */
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem 1rem;
+  background-color:beige;
+  font-weight:bold;
 }
 
 .navbar .container,
@@ -10942,4 +10944,3 @@ a.text-dark:focus {
   }
 
 }
-
