--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -4509,13 +4509,13 @@ input[type=button].btn-block {
 }
 
 .navbar {
-  /* position: relative; */
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem 1rem;
-  background-color:beige;
+  background-color:#FFDEAD;
   font-weight:bold;
 }
 
