--- a/src/public/css/mypage.css
+++ b/src/public/css/mypage.css
@@ -2,9 +2,10 @@
   background-color: beige;
 }
 
-.test {
-  background: #ecf7fb;
+.about-register {
+  background: #FFDEAD;
 }
+
 
 @media screen and (max-width: 768px) {
   .about2 {
